--- a/Reproducible_figures_assignment.Rmd
+++ b/Reproducible_figures_assignment.Rmd
@@ -338,9 +338,13 @@ I am going to run an ANCOVA test to test the significance of the relationship be
 First of all, I am going to check that the data we have meets the assumptions for an ANCOVA test. 
 
 The assumptions of an ANCOVA test are:
+
 - Measurements in each group are a random sample from their populations 
-- Variable (flipper length) is normally distributed in each population 
+
+- Variable (flipper length) is normally distributed in each population
+
 - Variance is the same in all groups 
+
 - Linear relationship between the response variable and covariate
 
 I will assume that the data has been collected randomly, and will test the other assumptions, as below. The response variable we are testing is flipper length, and we are testing the amount of variation in this variable that is explained by species (a factor) and body mass (a covariate).
@@ -495,10 +499,8 @@ To make the code more reproducible, it might have helped to have if/else stateme
 -   *What did you learn about writing code for other people?*
 
 
-My partner has suggested that slightly more annotations in some places may have helped users to interpret the methods which I have used. I do agree that this is important, to understand the changes which will have been made to the output. When I applied the statistical tests, for example, if I had explained what each step was doing in more detail, it may have made it more readable. I could have explained further why I have used each graph for testing the ANCOVA assumptions, and what we would expect to see if the graph supported our assumptions. Furthermore, I agree that using an increased number of annotations in my ‘plotting_homework.R’ file would have made the file more understandable to a user wanting to replicate my code with their own data set. I hadn’t originally done this, since I had thought that many of lines would be explanatory in themselves, but adding extra lines of annotations would have enhanced replicability. This does show me the importance of being as clear as possible in the methods I am carrying out because for different users, there may be different levels of experience with the standard functions in these packages being used. Therefore, being explicit in my annotations will aid users in replicating my code.
+My partner has suggested that slightly more annotations in some places may have helped users to interpret the methods which I have used. I do agree that this is important, to understand the changes which will have been made to the output. When I applied the statistical tests, for example, if I had explained what each step was doing in more detail, it may have made it more readable. I could have explained further why I have used each graph for testing the ANCOVA assumptions, and what we would expect to see if the graph supported our assumptions. Furthermore, I agree that using an increased number of annotations in my ‘plotting_homework.R’ file would have made the file more understandable to a user wanting to replicate my code with their own data set. I hadn’t originally done this, since I had thought that many of lines would be explanatory in themselves, but adding extra lines of annotations would have enhanced replicability. This does show me the importance of being as clear as possible in the methods I am carrying out because for different users, there may be different levels of experience with the standard functions in these packages being used. Therefore, being explicit in my annotations will aid users to replicate my code.
 
 To limit any potential mistakes in my code, it would have been useful, as my partner has suggested, to create an increased number of functions for plotting my graphs, including functions for colour, labelling and titles. This means that there would only be one reference point to look back to, and this would make it easier for users looking to reproduce my code if there had been an error; they would also be able to more easily signpost where the error was made.
 
-Throughout this process of analysing the data set, I have learnt the importance of making it clear as to what you are doing and why, in the sense of both code annotations and making clear object/function names. To make data both understandable and reproducible, the lines of code need to be explicit in the methods they are doing and the data or columns/rows they are referring to, so it is easy to follow through. I have also learnt that it helps to print the output of a function applied, as this also makes following the analysis steps more intuitive. Finally, I have learnt the importance of piping and keeping code in custom functions, in order to make it easy for users to refer back to. When looking over an R document, having human understandable functions which condense the coding used make the analysis steps, again, more simple to follow, and also means any mistakes can be identified and altered much more quickly. This enhances reproducibility and makes the code more understandable.
-
-
+Throughout this process of analysing the data set, I have learnt the importance of making it clear as to what you are doing and why, in the sense of both code annotations and making clear object/function names. To make data both understandable and reproducible, the lines of code need to be explicit in the methods they are doing and the data or columns/rows they are referring to, so it is easy to follow through. I have also learnt that it helps to print the output of a function applied, as this also makes following the analysis steps more intuitive. Additionally, I have learnt the importance of piping and keeping code in custom functions, in order to make it easy for users to refer back to. When looking over an R document, having human understandable functions which condense the coding used make the analysis steps, again, more simple to follow, and also means any mistakes can be identified and altered much more quickly. Finally, I have learnt the importance of including a document with the package versions of packages used in my code. My partner included a document listing the versions used, which improves the reproducibility of the work since it provides a reference point for users should any errors arise with the current versions they have installed.
